Added win / draw check

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="btn22">""</string>
     <string name="XField">"X"</string>
     <string name="OField">"O"</string>
+    <string name ="EmptyField">""</string>
 </resources>
