Added Win/Draw splash screens, locked rotation and basically finished the game

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,8 @@
     <string name="btn22">""</string>
     <string name="XField">"X"</string>
     <string name="OField">"O"</string>
-    <string name ="EmptyField">""</string>
+    <string name="EmptyField">""</string>
+    <string name = "PlayerOneWon">"Player One won!"</string>
+    <string name = "PlayerTwoWon">"Player Two won!"</string>
+    <string name = "Draw">"Draw!"</string>
 </resources>
