Added README, added Reset button and a score counter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,8 @@
     <string name="XField">"X"</string>
     <string name="OField">"O"</string>
     <string name="EmptyField">""</string>
-    <string name = "PlayerOneWon">"Player One won!"</string>
-    <string name = "PlayerTwoWon">"Player Two won!"</string>
-    <string name = "Draw">"Draw!"</string>
+    <string name="PlayerOneWon">"Player One won!"</string>
+    <string name="PlayerTwoWon">"Player Two won!"</string>
+    <string name="Draw">"Draw!"</string>
+    <string name="Reset">"Reset!"</string>
 </resources>
